--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
     flex-direction: column;
     gap: 20px;
     border-radius: 10px;
+    box-shadow: 0px 0px 30px rgba(0, 0, 0, .7);
 }
 
 .screen {
